[package]
name = "ktime"
version = "0.1.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
documentation = "https://github.com/clowdhaus/ktime"
homepage = "https://github.com/clowdhaus/ktime"
repository = "https://github.com/clowdhaus/ktime"
license = "Apache-2.0"
edition = "2021"
categories = [
  "command-line-utilities",
]

[dependencies]
anstyle = "1.0"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive", "color"] }
clap-verbosity-flag = "2.0"
k8s-openapi = { version = "0.22", default-features = false, features = ["latest"] }
kube = { version = "0.93", default-features = false, features = [ "client", "derive", "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["log-always"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
