[package]
name = "ktime"
version = "0.1.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
documentation = "https://github.com/clowdhaus/ktime"
homepage = "https://github.com/clowdhaus/ktime"
repository = "https://github.com/clowdhaus/ktime"
license = "Apache-2.0"
edition = "2021"
categories = [
  "command-line-utilities",
  "kubernetes",
]

[dependencies]
anstyle = "1.0"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "color"] }
clap-verbosity-flag = "3.0"
futures = { version = "0.3", features = ["async-await"] }
k8s-openapi = { version = "0.25", default-features = false, features = ["latest"] }
kube = { version = "0.99", default-features = false, features = [ "client", "derive", "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.45", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", default-features = false, features = ["log-always"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
